Title: 매칭하기, Time: 1016ms, Memory: 42MB, Status: Passed - CodeTree